@@ -1,3 +1,7 @@
+* 2014-05-05 - thorben.betten@open-xchange.com
+
+ - Fix for bug 32296: Do not use proxy authentication for external mail accounts
+
 * 2014-05-05 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 32292: Prevent USM-JSON* and USM-EAS* sessions from being put to distributed storage 
